[package]
name = "tbf"
version = "0.1.4"
edition = "2018"
description = "Implementations of a tag-based filesystem"
keywords = ["filesystem", "tag", "no_std"]
categories = ["filesystem"]
license = "MIT/Apache-2.0"
repository = "https://github.com/CraftSpider/tbf"
readme = "README.md"

[features]
default = ["std", "imfs", "dfs"]
std = []

# Builtin implementations of the protocol
imfs = ["spin"]
dfs = ["std"]

[dependencies]
spin = { version = "0.9", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
